Один баг был, исправил

--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11D50b</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">11D50d</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
 		<string key="IBDocument.AppKitVersion">1138.32</string>
 		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">931</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUISwipeGestureRecognizer</string>
@@ -62,6 +62,7 @@
 						<string key="NSFrame">{{15, 550}, {288, 264}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">2</int>
@@ -119,44 +120,13 @@
 								<reference key="NSNextResponder" ref="461678569"/>
 								<int key="NSvFlags">292</int>
 								<array class="NSMutableArray" key="NSSubviews">
-									<object class="IBUILabel" id="84019993">
-										<reference key="NSNextResponder" ref="696399524"/>
-										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{0, 357}, {288, 77}}</string>
-										<reference key="NSSuperview" ref="696399524"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="926368938"/>
-										<string key="NSReuseIdentifierKey">_NS:9</string>
-										<bool key="IBUIOpaque">NO</bool>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">5</int>
-										<bool key="IBUIUserInteractionEnabled">NO</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<string key="IBUIText">      Итого</string>
-										<object class="NSColor" key="IBUITextColor">
-											<int key="NSColorSpace">1</int>
-											<bytes key="NSRGB">MCAwIDAAA</bytes>
-										</object>
-										<nil key="IBUIHighlightedColor"/>
-										<int key="IBUIBaselineAdjustment">0</int>
-										<float key="IBUIMinimumFontSize">10</float>
-										<object class="IBUIFontDescription" key="IBUIFontDescription">
-											<int key="type">2</int>
-											<double key="pointSize">20</double>
-										</object>
-										<object class="NSFont" key="IBUIFont">
-											<string key="NSName">Helvetica-Bold</string>
-											<double key="NSSize">20</double>
-											<int key="NSfFlags">16</int>
-										</object>
-									</object>
 									<object class="IBUITableView" id="658427827">
 										<reference key="NSNextResponder" ref="696399524"/>
 										<int key="NSvFlags">292</int>
 										<string key="NSFrameSize">{288, 370}</string>
 										<reference key="NSSuperview" ref="696399524"/>
 										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="84019993"/>
+										<reference key="NSNextKeyView" ref="484955708"/>
 										<string key="NSReuseIdentifierKey">_NS:9</string>
 										<object class="NSColor" key="IBUIBackgroundColor" id="62128074">
 											<int key="NSColorSpace">3</int>
@@ -172,8 +142,73 @@
 										<float key="IBUISectionHeaderHeight">22</float>
 										<float key="IBUISectionFooterHeight">22</float>
 									</object>
+									<object class="IBUIView" id="484955708">
+										<reference key="NSNextResponder" ref="696399524"/>
+										<int key="NSvFlags">292</int>
+										<array class="NSMutableArray" key="NSSubviews">
+											<object class="IBUILabel" id="84019993">
+												<reference key="NSNextResponder" ref="484955708"/>
+												<int key="NSvFlags">292</int>
+												<string key="NSFrameSize">{288, 43}</string>
+												<reference key="NSSuperview" ref="484955708"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="577228771"/>
+												<string key="NSReuseIdentifierKey">_NS:9</string>
+												<bool key="IBUIOpaque">NO</bool>
+												<bool key="IBUIClipsSubviews">YES</bool>
+												<int key="IBUIContentMode">5</int>
+												<bool key="IBUIUserInteractionEnabled">NO</bool>
+												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<string key="IBUIText">      Итого</string>
+												<object class="NSColor" key="IBUITextColor">
+													<int key="NSColorSpace">1</int>
+													<bytes key="NSRGB">MCAwIDAAA</bytes>
+												</object>
+												<nil key="IBUIHighlightedColor"/>
+												<int key="IBUIBaselineAdjustment">0</int>
+												<float key="IBUIMinimumFontSize">10</float>
+												<object class="IBUIFontDescription" key="IBUIFontDescription">
+													<int key="type">2</int>
+													<double key="pointSize">20</double>
+												</object>
+												<object class="NSFont" key="IBUIFont">
+													<string key="NSName">Helvetica-Bold</string>
+													<double key="NSSize">20</double>
+													<int key="NSfFlags">16</int>
+												</object>
+											</object>
+											<object class="IBUIImageView" id="577228771">
+												<reference key="NSNextResponder" ref="484955708"/>
+												<int key="NSvFlags">292</int>
+												<string key="NSFrame">{{0, 35}, {288, 14}}</string>
+												<reference key="NSSuperview" ref="484955708"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="105567343"/>
+												<bool key="IBUIOpaque">NO</bool>
+												<bool key="IBUIClipsSubviews">YES</bool>
+												<int key="IBUIContentMode">4</int>
+												<bool key="IBUIMultipleTouchEnabled">YES</bool>
+												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<object class="NSCustomResource" key="IBUIImage">
+													<string key="NSClassName">NSImage</string>
+													<string key="NSResourceName">paper_bottom.png</string>
+												</object>
+											</object>
+										</array>
+										<string key="NSFrame">{{0, 370}, {288, 55}}</string>
+										<reference key="NSSuperview" ref="696399524"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="84019993"/>
+										<string key="NSReuseIdentifierKey">_NS:196</string>
+										<object class="NSColor" key="IBUIBackgroundColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MQA</bytes>
+											<reference key="NSCustomColorSpace" ref="616086423"/>
+										</object>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+									</object>
 								</array>
-								<string key="NSFrameSize">{288, 438}</string>
+								<string key="NSFrameSize">{288, 425}</string>
 								<reference key="NSSuperview" ref="461678569"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="658427827"/>
@@ -195,6 +230,23 @@
 						<reference key="IBUIBackgroundColor" ref="62128074"/>
 						<bool key="IBUIClipsSubviews">YES</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+					</object>
+					<object class="IBUIImageView" id="105567343">
+						<reference key="NSNextResponder" ref="191373211"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{16, 436}, {288, 14}}</string>
+						<reference key="NSSuperview" ref="191373211"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="926368938"/>
+						<bool key="IBUIOpaque">NO</bool>
+						<bool key="IBUIClipsSubviews">YES</bool>
+						<int key="IBUIContentMode">4</int>
+						<bool key="IBUIMultipleTouchEnabled">YES</bool>
+						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+						<object class="NSCustomResource" key="IBUIImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">paper_top.png</string>
+						</object>
 					</object>
 					<object class="IBUIImageView" id="97418279">
 						<reference key="NSNextResponder" ref="191373211"/>
@@ -324,6 +376,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mMaskView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="461678569"/>
+					</object>
+					<int key="connectionID">58</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">mTotalLbl</string>
 						<reference key="source" ref="372490531"/>
 						<reference key="destination" ref="84019993"/>
@@ -332,11 +392,27 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">mMaskView</string>
+						<string key="label">mPriceView</string>
 						<reference key="source" ref="372490531"/>
-						<reference key="destination" ref="461678569"/>
+						<reference key="destination" ref="484955708"/>
 					</object>
-					<int key="connectionID">58</int>
+					<int key="connectionID">60</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mPaperBottomImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="577228771"/>
+					</object>
+					<int key="connectionID">63</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mPaperTopImageView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="105567343"/>
+					</object>
+					<int key="connectionID">64</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
@@ -437,6 +513,7 @@
 							<reference ref="97418279"/>
 							<reference ref="926368938"/>
 							<reference ref="461678569"/>
+							<reference ref="105567343"/>
 						</array>
 						<reference key="parent" ref="0"/>
 						<string key="objectName">Main Scroll View</string>
@@ -471,14 +548,9 @@
 						<string key="objectName">Swipe Gesture Recognizer Down</string>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">32</int>
-						<reference key="object" ref="97418279"/>
-						<reference key="parent" ref="191373211"/>
-						<string key="objectName">Price View Mask</string>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">33</int>
 						<reference key="object" ref="926368938"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="191373211"/>
 						<string key="objectName">Animation View</string>
 					</object>
@@ -525,23 +597,49 @@
 						<int key="objectID">35</int>
 						<reference key="object" ref="696399524"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="84019993"/>
 							<reference ref="658427827"/>
+							<reference ref="484955708"/>
 						</array>
 						<reference key="parent" ref="461678569"/>
 						<string key="objectName">Price View</string>
-					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">36</int>
-						<reference key="object" ref="84019993"/>
-						<reference key="parent" ref="696399524"/>
-						<string key="objectName">Price Label</string>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
 						<reference key="object" ref="658427827"/>
 						<reference key="parent" ref="696399524"/>
 						<string key="objectName">Price Table View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">59</int>
+						<reference key="object" ref="484955708"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="84019993"/>
+							<reference ref="577228771"/>
+						</array>
+						<reference key="parent" ref="696399524"/>
+						<string key="objectName">Price View</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">36</int>
+						<reference key="object" ref="84019993"/>
+						<reference key="parent" ref="484955708"/>
+						<string key="objectName">Price Label</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">61</int>
+						<reference key="object" ref="577228771"/>
+						<reference key="parent" ref="484955708"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="97418279"/>
+						<reference key="parent" ref="191373211"/>
+						<string key="objectName">Price View Mask</string>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">62</int>
+						<reference key="object" ref="105567343"/>
+						<reference key="parent" ref="191373211"/>
 					</object>
 				</array>
 			</object>
@@ -566,6 +664,9 @@
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="52.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="57.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="59.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="61.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="62.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="7.CustomClassName">PriceTableViewController</string>
 				<string key="7.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
@@ -573,7 +674,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">58</int>
+			<int key="maxID">64</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -599,6 +700,9 @@
 						<string key="mGestureRecognizerUp">UISwipeGestureRecognizer</string>
 						<string key="mMainView">UIScrollView</string>
 						<string key="mMaskView">UIView</string>
+						<string key="mPaperBottomImageView">UIImageView</string>
+						<string key="mPaperTopImageView">UIImageView</string>
+						<string key="mPriceView">UIView</string>
 						<string key="mTotalLbl">UILabel</string>
 						<string key="menuTableViewController">MenuTableViewController</string>
 						<string key="priceTableViewController">PriceTableViewController</string>
@@ -630,6 +734,18 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="mMaskView">
 							<string key="name">mMaskView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mPaperBottomImageView">
+							<string key="name">mPaperBottomImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mPaperTopImageView">
+							<string key="name">mPaperTopImageView</string>
+							<string key="candidateClassName">UIImageView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mPriceView">
+							<string key="name">mPriceView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="mTotalLbl">
@@ -683,15 +799,17 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<dictionary class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="calc_bg.png">{320, 514}</string>
 			<string key="chek_top.png">{320, 154}</string>
+			<string key="paper_bottom.png">{288, 14}</string>
+			<string key="paper_top.png">{288, 14}</string>
 			<string key="table_mask.png">{296, 275}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">931</string>
 	</data>
 </archive>
